[package]
name = "jit_extractor"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_libimobiledevice = { version = "*", features = [ "static" ], path = "../rusty_libimobiledevice" }
directories = { version = "*" }